--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <html>
+  <head>
+  </head>
+  <body>
+    <h1>Ethan S Website</h1>
+    <center>
+    <img src="https://pngimg.com/uploads/volleyball/volleyball_PNG2.png">
+  </body>
 
-
-TESTING THIS WEBSITE
-
-
-
+<sytle>
+h1{
+  color: 54, 36, 23;
+  font-size: 80px;
+  text-align: center;
+  text-decoration-line: overline underline;
+  text-decoration-thickness: 6px;
+}
+body{
+  background-color:lightblue;
+}
+img{
+  width: 25%;
+}
+img:hover{
+  width: 40%;
+}
+  
+</sytle>
 
 </html>
