--- a/index.html
+++ b/index.html
@@ -8,3 +8,21 @@
   </body>
 </html>
 
+<style>
+body{
+  background-color:lightblue;
+}
+h1{
+  color: 54, 36, 23;
+  font-size: 80px;
+  text-align: center;
+  text-decoration-line: overline underline;
+  text-decoration-thickness: 6px;
+}
+img{
+  width: 25%;
+}
+img:hover{
+  width: 40%;
+} 
+</style>
