--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Ethan S Website</h1>
+<head>
+</head>
+<body>
+  <nav>
     <center>
+      <li> HOME </li>
+      <li> APPS </li>
+      <li> ABOUT ME </li>
+  </nav>
+  <center>
+    <h1>Ethan S Website</h1>
     <img src="https://pngimg.com/uploads/volleyball/volleyball_PNG2.png">
-  </body>
+</body>
 </html>
-
-<style>
-body{
-  background-color:lightblue;
-}
-h1{
-  color: 54, 36, 23;
-  font-size: 80px;
-  text-align: center;
-  text-decoration-line: overline underline;
-  text-decoration-thickness: 6px;
-}
-img{
-  width: 25%;
-}
-img:hover{
-  width: 40%;
-} 
-</style>
