--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+
 <head>
 </head>
+
 <body>
   <nav>
     <center>
@@ -10,6 +12,7 @@
   </nav>
   <center>
     <h1>Ethan S Website</h1>
-    <img src="https://pngimg.com/uploads/volleyball/volleyball_PNG2.png">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/2086913400387050800/467576309F70F694F9EB45999B1C657FC229EDAC/?imw=512&imh=288&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true">
 </body>
+
 </html>
