--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
-<title> EthanS' Super Cool Website </title>
+  <title> EthanS' Super Cool Website </title>
 </head>
 
 <body>
   <nav>
     <center>
-      <li> HOME </li>
-      <li> APPS </li>
-      <li> ABOUT ME </li>
+      <li><a href="index.html"> HOME</a></li>
+      <li><a href="apps.html"> APPS</a></li>
+      <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
+  <br>
   <center>
     <h1>Ethan S Website</h1>
+    <br>
     <img src="https://steamuserimages-a.akamaihd.net/ugc/2086913400387050800/467576309F70F694F9EB45999B1C657FC229EDAC/?imw=512&imh=288&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true">
 </body>
 
