--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,14 @@
 
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <title> EthanS' Super Cool Website </title>
+</head>
+
+<body>
+  <nav>
+    <center>
+      <li><a href="index.html"> HOME</a></li>
+      <li><a href="apps.html"> APPS</a></li>
+      <li><a href="aboutme.html"> ABOUT ME</a></li>
+  </nav>
