--- a/apps.html
+++ b/apps.html
@@ -1,5 +1,5 @@
-
-
+<html>
+  
 <head>
   <link rel="stylesheet" href="style.css">
   <title> EthanS' Super Cool Website </title>
@@ -12,3 +12,7 @@
       <li><a href="apps.html"> APPS</a></li>
       <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
+
+</body>
+
+</html>
