--- a/apps.html
+++ b/apps.html
@@ -12,7 +12,15 @@
       <li><a href="apps.html"> APPS</a></li>
       <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
-
+  <center>
+  <br>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/SUESXs1f5xcVwsrM58SctBdwOX9FS3uvZJZ9XcWttCn/embed?nosource"></iframe>
+<br>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/7w13dmkV60NweP-_Ao_jmUePXR5Au7_gjHuYOC3QrPg/embed?nosource"></iframe>
+<br>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/540yuPaWz_ziwhW3YkYj5GQL0JTrHb_W3QJHinyJ1D9/embed?nosource"></iframe>
+  <br>
+  </center>
 </body>
 
 </html>
