--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
   
 <head>
   <link rel="stylesheet" href="style.css">
-  <title> EthanS' Super Cool Website </title>
+  <title> EthanS' Super Cool Apps </title>
 </head>
 
 <body>
