--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
       <li><a href="apps.html"> APPS</a></li>
       <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
-<h1> My CS2 Clips</h1>
+<h1> My Clips</h1>
   
 </body>
 
