tesign mp4 video

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,10 @@
       <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
 <h1> My Clips</h1>
-  
+  <video width="1280" height="720" controls autoplay muted loop>
+<source src="videos/WebIntroG.mp4" type="video/mp4">
+ Your browser does not support the video tag.
+</video>
 </body>
 
 </html>
