--- a/aboutme.html
+++ b/aboutme.html
@@ -13,10 +13,12 @@
       <li><a href="aboutme.html"> ABOUT ME</a></li>
   </nav>
 <h1> My Clips</h1>
-  <video width="1280" height="720" controls autoplay muted loop>
+  <center>
+      <video width="1280" height="720" controls autoplay muted loop>
 <source src="videos/WebIntroG.mp4" type="video/mp4">
- Your browser does not support the video tag.
 </video>
+  </center>
+
 </body>
 
 </html>
