--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
   </nav>
 <h1> My Clips</h1>
   <center>
-      <video width="1280" height="720" controls autoplay muted loop>
+      <video width="1280" controls autoplay muted loop>
 <source src="videos/WebIntroG.mp4" type="video/mp4">
 </video>
   </center>
