--- a/aboutme.html
+++ b/aboutme.html
@@ -14,12 +14,10 @@
   </nav>
 <h1> My Clips</h1>
   <center>
-      <video width="1280" controls autoplay muted loop>
-<source src="videos/WebIntroG.mp4" type="video/mp4">
-</video>
-
-< video width="1280" controls autoplay muted loop>
-<source src="VideoURL.mp4" type="video/mp4">
+    <br>
+    <h2>Clip 1</h2>
+ <video width="1280"  controls>
+    <source src="video-1.mp4" type="video/mp4">
 </video>
   </center>
 
