finalized(add videos and titles

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,11 @@
  <video width="1280"  controls>
     <source src="video-1.mp4" type="video/mp4">
 </video>
+      <br>
+    <h2>Clip 2</h2>
+ <video width="1280"  controls>
+    <source src="video-1.mp4" type="video/mp4">
+</video>
   </center>
 
 </body>
