--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,9 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title> EthanS' Super Cool Clips</title>
+   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Display</title>
 </head>
 
 <body>
@@ -16,14 +19,14 @@
   <center>
     <br>
     <h2>Clip 1</h2>
- <video width="1280"  controls>
-    <source src="video-1.mp4" type="video/mp4">
-</video>
+ <video width="600" controls>
+        <source src="./League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
+    </video>
       <br>
     <h2>Clip 2</h2>
- <video width="1280"  controls>
-    <source src="video-1.mp4" type="video/mp4">
-</video>
+ <video width="600" controls>
+        <source src="./Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
+    </video>
   </center>
 
 </body>
