--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 <h1> My Clips</h1>
   <center>
     <br>
-    <h2>Clip 1</h2>
+    <h2>testing1</h2>
  <video width="1280" controls>
         <source src="Clips/League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
     </video>
