--- a/aboutme.html
+++ b/aboutme.html
@@ -18,14 +18,14 @@
 <h1> My Clips</h1>
   <center>
     <br>
-    <h2>testing1</h2>
+    <h2>testing2</h2>
  <video width="1280" controls>
-        <source src="Clips/League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
+        <source src="./League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
     </video>
       <br>
     <h2>Clip 2</h2>
  <video width="1280" controls>
-        <source src="Clips/Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
+        <source src="./Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
     </video>
   </center>
 
