--- a/aboutme.html
+++ b/aboutme.html
@@ -1,34 +1,32 @@
-<html>
-  
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
-  <title> EthanS' Super Cool Clips</title>
-   <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Display</title>
+    <link rel="stylesheet" href="style.css">
+    <title>EthanS' Super Cool Clips</title>
 </head>
-
 <body>
-  <nav>
+    <nav>
+        <center>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="apps.html">APPS</a></li>
+                <li><a href="aboutme.html">ABOUT ME</a></li>
+            </ul>
+        </center>
+    </nav>
+    <h1>My Clips</h1>
     <center>
-      <li><a href="index.html"> HOME</a></li>
-      <li><a href="apps.html"> APPS</a></li>
-      <li><a href="aboutme.html"> ABOUT ME</a></li>
-  </nav>
-<h1> My Clips</h1>
-  <center>
-    <br>
-    <h2>testing4</h2>
- <video width="1280" controls>
-        <source src="Clips/League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
-    </video>
-      <br>
-    <h2>Clip 2</h2>
- <video width="1280" controls>
-        <source src="Clips/Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
-    </video>
-  </center>
-
+        <br>
+        <h2>testing5</h2>
+        <video width="1280" controls>
+            <source src="Clips/League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
+        </video>
+        <br>
+        <h2>Clip 2</h2>
+        <video width="1280" controls>
+            <source src="Clips/Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
+        </video>
+    </center>
 </body>
-
 </html>
