--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,20 @@
         <video width="1280" controls>
             <source src="Videos/Counter-Strike 2_05-22-2024_17-25-49-280.mp4" type="video/mp4">
         </video>
+        <br>
+        <h2>(CS2)</h2>
+        <video width="1280" controls>
+            <source src="Videos/Counter-Strike 2_05-23-2024_20-49-43-752.mp4" type="video/mp4">
+        </video>
+                <br>
+        <h2>(CS2)</h2>
+        <video width="1280" controls>
+            <source src="Videos/Counter-Strike 2_05-23-2024_20-51-35-757.mp4" type="video/mp4">
+        </video>
+                <h2>(CS2)</h2>
+        <video width="1280" controls>
+            <source src="Videos/Counter-Strike 2_05-23-2024_20-52-34-800.mp4" type="video/mp4">
+        </video>
     </center>
 </body>
 </html>
