--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
     <title>EthanS' Super Cool Clips</title>
 </head>
@@ -18,7 +17,7 @@
     <h1>My Clips</h1>
     <center>
         <br>
-        <h2>PENTA KILL(League)</h2>
+        <h2>.PENTA KILL(League)</h2>
         <video width="1280" controls>
             <source src="Videos/League of Legends_05-22-2024_20-29-49-919.mp4" type="video/mp4">
         </video>
